--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
             }
         });
     });
+    
+    <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?b2161c20602efdc2a4e099d976992bf0";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+    
 </script>
 </body>
 </html>
