--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </div>
         <div class="menu">
             <a href="" class="animate-init">Blog</a>
-            <a target="_blank" rel="nofollow" href="https://twitter.com/rufei365" class="animate-init">Twitter</a>
-            <a target="_blank" rel="nofollow" href="https://www.instagram.com/rufei.wang" class="animate-init">Instagram</a>
-            <a target="_blank" rel="nofollow" href="https://t.me/rufei" class="animate-init">Telegram</a>
+            <a id="tw" target="_blank" rel="nofollow" href="https://twitter.com/rufei365" class="animate-init">Twitter</a>
+            <a id="ins" target="_blank" rel="nofollow" href="https://www.instagram.com/rufei.wang" class="animate-init">Instagram</a>
+            <a id="tg" target="_blank" rel="nofollow" href="https://t.me/rufei" class="animate-init">Telegram</a>
             <p>
                 <a href="" class="animate-init">
                     奥义：选择相信美好
