--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="quote">
                 <p class="quote-text animate-init">对未来真正的慷慨，是把一切献给现在。</p>
                 <p class="quote-author animate-init">《反抗者》—— 阿尔贝·加缪</p>
+                <img src="https://img.wangrufei.com/2019/xmddig4.jpg">
             </div>
         </div>
         <div class="menu">
